# Safe-spend

./: .env.example  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Procfile  README.md  backend_rules_test.py  backend_test.py  docker-compose.yml  railway.toml  render.yaml
.emergent/: emergent.yml  summary.txt
.railway/: config.json
backend/: .dockerignore  .env  .env.example  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  TESTING.md  jest.config.js  package-lock.json  package.json  railway.toml  server.py  start.sh
backend/docs/: POSTGRESQL_MIGRATION.md
backend/prisma/: dev.db  dev.db-journal  migrate-to-postgres.sh  schema.postgres.prisma  schema.postgresql.prisma  schema.prisma
backend/scripts/: check_schema_parity.js  smoke-test.js
backend/src/: server.js
docs/: AAV_INTEGRATION_PROPOSAL.md  PRELAUNCH_AUDIT_REPORT.md
frontend/: .dockerignore  .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  prerender.py  railway.toml  start.sh  tailwind.config.cjs  tailwind.config.js  vite.config.js  vite.config.ts
memory/: PRD.md  test_credentials.md
sdks/python/: .gitignore  LICENSE  README.md  pyproject.toml
sdks/python/examples/: README.md  budget_aware_agent.py  simple_agent.py
sdks/python/safespend/: __init__.py  _version.py  async_client.py  client.py  errors.py  types.py
sdks/python/safespend/integrations/: __init__.py  langchain_tools.py
sdks/python/tests/: test_e2e.py
test_reports/: abuse_limits_hostile_report.md  governance_legal_ux_report.md  iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_15.json  iteration_16.json  iteration_17.json  iteration_18.json  iteration_19.json  iteration_2.json  iteration_20.json  iteration_21.json  iteration_22.json  iteration_23.json  iteration_24.json  iteration_25.json  iteration_26.json  iteration_27.json  iteration_28.json  iteration_29.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
(+280 files in other folders)
