[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safespend"
version = "0.1.0"
description = "Python client for the Safe-Spend API (Agentic Trust)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Agentic Trust", email = "support@agentictrust.app" },
]
license = { text = "Proprietary" }
keywords = ["safe-spend", "escrow", "ai agents", "payments", "agentic trust", "spending control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "types-requests>=2.28",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0",
]
async = [
    "httpx>=0.24.0",
]
all = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://agentictrust.app"
Documentation = "https://agentictrust.app/docs"
Source = "https://github.com/agentictrust/safespend-python"
Issues = "https://github.com/agentictrust/safespend-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["safespend*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
